<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRegistrarse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_desc_logo"
        android:src="@drawable/dogcatlogo" />

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_bienvenido"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/text_nombre"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/text_apellido"
            android:inputType="text|textPersonName" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/text_hint_contraseña"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_text_agregar"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/celeste"
            android:text="@string/btn_text_comenzar"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_olvide" />


    </LinearLayout>


</LinearLayout>