<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btn_text_ingresar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_desc_logo"
        android:src="@drawable/dogcatlogo" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_bienvenido"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/text_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/text_hint_contraseña"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Ingresar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:width="140sp"
                android:backgroundTint="@color/orange"
                android:text="@string/btn_text_ingresar"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_text_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:width="140sp"
                android:backgroundTint="@color/celeste"
                android:text="@string/btn_text_registrarse"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_olvide" />


    </LinearLayout>


</LinearLayout>