<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_desc_logo"
        android:src="@drawable/dogcatlogo" />


    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verMascota"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/btn_text_ir" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_nombre_mascota1"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verMascota1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/btn_text_ir1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_nombre_mascota2"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verMascota2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/btn_text_ir2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_nombre_mascota3"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_text_agregar"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:backgroundTint="@color/orange"
            android:text="@string/btn_text_agregarMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />



    </LinearLayout>


</LinearLayout>