<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/misMascotas001"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_desc_logo"
        android:src="@drawable/dogcatlogo" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_desc_mascota001"
        android:src="@drawable/mascota01" />


    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_mascota001"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_text_comer"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">

        <Button

            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_text_beber"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">

        <Button

            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_text_aseo"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical">

        <Button

            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_text_vacunacion"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>


</LinearLayout>