<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btn_text_ingresar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="100dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_desc_logo"
        android:src="@drawable/dogcatlogo" />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/text_text_para" />

        <Button
            android:id="@+id/btn_text_agregar"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="130dp"
            android:backgroundTint="@color/orange"
            android:text="@string/btn_text_agregarMascota"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_text_misMascotas"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/celeste"
            android:text="@string/btn_text_misMascotas"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>